# chit-chat-hub-ui/src/app/services/models/chat-response.ts
@@ -3,6 +3,7 @@
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
 export interface ChatResponse {
+  createdDate?: string;
   id?: string;
   lastMessage?: string;
   lastMessageTime?: string;
