# chit-chat-hub-ui/src/app/services/models/message-response.ts
@@ -6,7 +6,9 @@ export interface MessageResponse {
   content?: string;
   createdAt?: string;
   id?: number;
-  media?: string;
+  media?: Array<string>;
+  receiverId?: string;
+  senderId?: string;
   state?: 'SENT' | 'SEEN';
   type?: 'TEXT' | 'IMAGE' | 'AUDIO' | 'VIDEO';
 }
